# MythEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CmakeUtils/: LibrarySorter.cmake  SourceGrouping.cmake
Platform/Win64/: Config.hpp  Config.ini
Platform/Win64/RHI/DX12/: D3D12Window.cpp  D3D12Window.hpp
Platform/Win64/RHI/OpenGL/: OpenGLBaseRender.cpp  OpenGLBaseRender.hpp  OpenGLCullingCPURender.cpp  OpenGLCullingCPURender.hpp  OpenGLCullingGPURender.cpp  OpenGLCullingGPURender.hpp  OpenGLHDRRender.cpp  OpenGLHDRRender.hpp  OpenGLLargeSceneRender.cpp  OpenGLLargeSceneRender.hpp  OpenGLOITransparency.cpp  OpenGLOITransparency.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLSSAORender.cpp  OpenGLSSAORender.hpp  OpenGLSceneCompositionRender.cpp  OpenGLSceneCompositionRender.hpp  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.hpp  OpenGLShadowMapping.cpp  OpenGLShadowMapping.hpp  OpenGLStudyRender.cpp  OpenGLStudyRender.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  OpenGL_GLTF_PBRRender.cpp  OpenGL_GLTF_PBRRender.hpp
Platform/Win64/RHI/Vulkan/: VulkanAtomicTestRender.cpp  VulkanAtomicTestRender.hpp  VulkanBRDFLUTRender.cpp  VulkanBRDFLUTRender.hpp  VulkanBaseRender.cpp  VulkanBaseRender.hpp  VulkanComputeMeshRender.cpp  VulkanComputeMeshRender.hpp  VulkanComputeTextureRender.cpp  VulkanComputeTextureRender.hpp  VulkanHDRRender.cpp  VulkanHDRRender.hpp  VulkanLargeSceneRender.cpp  VulkanLargeSceneRender.hpp  VulkanNonuniformIndexingRender.cpp  VulkanNonuniformIndexingRender.hpp  VulkanPhysicsRender.cpp  VulkanPhysicsRender.hpp  VulkanRender.cpp  VulkanRender.hpp  VulkanSSAORender.cpp  VulkanSSAORender.hpp  VulkanSceneCompositionRender.cpp  VulkanSceneCompositionRender.hpp  VulkanSceneGraphRender.cpp  VulkanSceneGraphRender.hpp  VulkanShadowMappingRender.cpp  VulkanShadowMappingRender.hpp  VulkanStudyRender.cpp  VulkanStudyRender.hpp  VulkanWindow.cpp  VulkanWindow.hpp  Vulkan_GLTF_PBRRender.cpp  Vulkan_GLTF_PBRRender.hpp
Platform/Win64/Shaders/OpenGL/: GLBufferDeclarations.h  GLBufferDeclarationsFinalChapter.h
Platform/Win64/Shaders/OpenGL/BloomShader/: GaussianBlur.frag
Platform/Win64/Shaders/OpenGL/CookbookSSAO/: BlurX.frag  BlurY.frag  SSAO.frag  SSAO_Combine.frag
Platform/Win64/Shaders/OpenGL/Cubemap/: CubemapCube.frag  CubemapCube.vert  CubemapModel.frag  CubemapModel.vert
Platform/Win64/Shaders/OpenGL/DepthMapShaders/: DepthCubemapShader.frag  DepthCubemapShader.geom  DepthCubemapShader.vert  DepthMapDebugScreenShader.frag  DepthMapShader.vs
Platform/Win64/Shaders/OpenGL/FrustumCulling/: FrustumCulling.comp
Platform/Win64/Shaders/OpenGL/FullScreenQuad/: FullScreenQuad.vert
Platform/Win64/Shaders/OpenGL/GBufferShader/: GBufferGeometryShader.frag  GBufferGeometryShader.vs  LightingPassShader.frag
Platform/Win64/Shaders/Vulkan/: 22_shader_ubo.vert  26_combined_image_sampler.vert  27_depth_buffering.frag  27_depth_buffering.vert  VK01_BRDF_LUT.comp  VK02.frag  VK02_ImGui.frag  VK02_ImGui.vert  VK04_compute_mesh.comp  VK04_compute_texture.comp  VK04_render.frag  VK04_render.vert  VK04_render_color.frag  VKIndirect01.vert  VK_GLTF_PBRShader.frag  VK_GLTF_PBRShader.vert  VK_texture_array.frag  VK_texture_array.vert  VulkanCommon.h  compile_09.bat  compile_18.bat  compile_22.bat  compile_26.bat  compile_27.bat  compile_VK01Indirect.bat  mesh_common.inc
Platform/Win64/UserInput/GLFW/: GLFWUserInput.cpp  GLFWUserInput.hpp
Shared/: main.cpp
Shared/Engine/: Bitmap.hpp  EasyProfilerWrapper.hpp  EngineConfiguration.hpp  EngineTypes.hpp  Graph.hpp  ImageUtils.cpp  ImageUtils.hpp  UtilsCubemap.cpp  UtilsCubemap.hpp
Shared/Engine/Camera/: BaseCamera.hpp  TestCamera.hpp
Shared/Engine/Filesystem/: Config.hpp  FilesystemUtilities.hpp
Shared/Engine/Mesh/: BaseMesh.cpp  BaseMesh.hpp  BaseModel.cpp  BaseModel.hpp
Shared/Engine/Physics/: Physics.cpp  Physics.hpp
Shared/Engine/Renderer/: ShaderInterface.hpp
Shared/Engine/Scene/: Mareial.cpp  Mareial.hpp  MergeUtil.cpp  MergeUtil.hpp  Scene.cpp  Scene.hpp  VtxData.cpp  VtxData.hpp  vec4.hpp
Shared/Engine/System/: ApplicationInterface.hpp  WindowInterface.cpp  WindowInterface.hpp
Shared/Engine/Utils/: RedirectToConsole.hpp  Utils.cpp  Utils.hpp  UtilsFPS.hpp  UtilsMath.hpp
Shared/RHI/: CMakeLists.txt
Shared/RHI/OpenGL/: OpenGLBaseMesh.cpp  OpenGLBaseMesh.hpp  OpenGLBaseModel.cpp  OpenGLBaseModel.hpp  OpenGLBaseShader.cpp  OpenGLBaseShader.hpp  OpenGLUtils.cpp  OpenGLUtils.hpp
Shared/RHI/OpenGL/Framework/: GLFWApp.hpp  GLFramebuffer.cpp  GLFramebuffer.hpp  GLMesh.cpp  GLMesh.hpp  GLSceneData.cpp  GLSceneData.hpp  GLSceneDataLazy.cpp  GLSceneDataLazy.hpp  GLShader.cpp  GLShader.hpp  GLSkyboxRenderer.cpp  GLSkyboxRenderer.hpp  GLTexture.cpp  GLTexture.hpp  LineCanvasGL.cpp  LineCanvasGL.hpp  UtilsGLImGui.hpp
Shared/RHI/Vulkan/: UtilsVulkan.cpp  UtilsVulkan.hpp  VulkanBaseModel.cpp  VulkanBaseModel.hpp
Shared/RHI/Vulkan/Framework/: AtomicRenderer.cpp  AtomicRenderer.hpp  Barriers.hpp  CompositeRenderer.hpp  CubeRenderer.cpp  CubeRenderer.hpp  FinalRenderer.cpp  FinalRenderer.hpp  GuiRenderer.cpp  GuiRenderer.hpp  InfinitePlaneRenderer.cpp  InfinitePlaneRenderer.hpp  LineCanvas.cpp  LineCanvas.hpp  MultiRenderer.cpp  MultiRenderer.hpp  QuadRenderer.cpp  QuadRenderer.hpp  Renderer.hpp  VulkanApp.cpp  VulkanApp.hpp  VulkanResources.cpp  VulkanResources.hpp  VulkanShaderProcessor.cpp  VulkanShaderProcessor.hpp
Shared/RHI/Vulkan/Renderers/: VulkanCanvas.cpp  VulkanCanvas.hpp  VulkanClear.cpp  VulkanClear.hpp  VulkanComputeBase.cpp  VulkanComputeBase.hpp  VulkanComputedImage.cpp  VulkanComputedImage.hpp  VulkanComputedItem.cpp  VulkanComputedItem.hpp  VulkanComputedVB.cpp  VulkanComputedVB.hpp  VulkanCube.cpp  VulkanCube.hpp  VulkanFinish.cpp  VulkanFinish.hpp  VulkanImGui.cpp  VulkanImGui.hpp  VulkanModelRenderer.cpp  VulkanModelRenderer.hpp  VulkanMultiMeshRenderer.cpp  VulkanMultiMeshRenderer.hpp  VulkanPBRModelRenderer.cpp  VulkanPBRModelRenderer.hpp  VulkanQuadRenderer.cpp  VulkanQuadRenderer.hpp  VulkanRendererBase.cpp  VulkanRendererBase.hpp  VulkanSingleQuad.cpp  VulkanSingleQuad.hpp
(+102 files in other folders)
